--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@discordjs/opus": "^0.8.0",
+    "@discordjs/voice": "^0.14.0",
     "discord.js-selfbot-v13": "^2.9.20",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "play-dl": "^1.9.6"
   }
 }
